[package]
name = "musli-serde"
version = "0.0.117"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
description = """
Transparent shim to use serde types in Müsli.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "serde", "serialization"]
categories = ["encoding", "encoding", "no-std", "no-std::no-alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]

[features]
default = ["std", "alloc"]
std = ["musli/std", "musli-utils/std", "serde/std"]
alloc = ["musli/alloc", "musli-utils/alloc", "serde/alloc"]

[dependencies]
musli = { path = "../musli", version = "0.0.117", default-features = false }
musli-utils = { path = "../musli-utils", version = "0.0.117", default-features = false }
serde = { version = "1.0.197", default-features = false }

[dev-dependencies]
serde_derive = "1.0.197"
url = { version = "2.5.0", features = ["serde"] }
musli-json = { path = "../musli-json", version = "0.0.117", features = ["std"] }
