[package]
name = "musli-tests"
version = "0.0.2"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.66"
description = """
Müsli is a flexible and generic binary serialization framework.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT/Apache-2.0"
keywords = ["no_std", "serialization"]
categories = ["encoding"]

[features]
default = ["std", "musli", "model_full"]
extra = ["rkyv", "dlhn", "bitcode", "serde_cbor"]
full = ["rmp-serde", "bincode", "serde_json"]
musli = ["musli-wire", "musli-descriptive", "musli-storage", "musli-json", "musli-value"]
std = ["musli/std", "musli-wire?/std", "musli-storage?/std", "musli-json?/std", "rand/std", "serde_json?/std", "rkyv?/std"]
test = ["musli-wire", "musli-storage", "musli-descriptive"]
simdutf8 = ["musli-wire?/simdutf8", "musli-storage?/simdutf8", "musli-descriptive?/simdutf8"]
musli-wire = ["dep:musli", "dep:musli-wire"]
musli-descriptive = ["dep:musli", "dep:musli-descriptive"]
musli-storage = ["dep:musli", "dep:musli-storage"]
musli-json = ["dep:musli", "dep:musli-json"]
musli-value = ["dep:musli", "dep:musli-value"]

model_full = ["model_vec", "model_128", "model_usize", "model_tuple", "model_float", "model_map", "model_map_string_key", "model_cstring"]
model_minimal = ["model_vec", "model_float"]
model_cstring = []
model_map = ["std"]
model_vec = []
model_128 = []
model_usize = []
model_tuple = []
model_float = []
model_map_string_key = ["std"]
model_rkyv = ["model_vec", "model_128", "model_map", "model_float"]
model_dlhn = ["model_vec", "model_usize", "model_tuple", "model_float", "model_map_string_key", "model_cstring"]
model_bitcode = ["model_vec", "model_usize", "model_tuple", "model_float", "model_map", "model_map_string_key", "model_cstring"]
model_serde_cbor = ["model_vec", "model_usize", "model_tuple", "model_float", "model_map", "model_map_string_key", "model_cstring"]

dlhn = ["dep:dlhn", "serde"]
serde_json = ["dep:serde_json", "serde"]
serde_cbor = ["dep:serde_cbor", "serde"]
bincode = ["dep:bincode", "serde"]
rmp-serde = ["dep:rmp-serde", "serde"]
serde = ["dep:serde", "bitcode?/serde"]
rkyv = ["dep:rkyv", "std"]

[dependencies]
musli = { path = "../musli", version = "0.0.48", default-features = false, optional = true, features = ["alloc"] }
musli-wire = { path = "../musli-wire", version = "0.0.48", default-features = false, features = ["alloc", "test"], optional = true }
musli-descriptive = { path = "../musli-descriptive", version = "0.0.48", default-features = false, features = ["alloc", "test"], optional = true }
musli-storage = { path = "../musli-storage", version = "0.0.48", default-features = false, features = ["alloc", "test"], optional = true }
musli-json = { path = "../musli-json", version = "0.0.48", default-features = false, features = ["alloc", "test",], optional = true }
musli-value = { path = "../musli-value", version = "0.0.48", default-features = false, features = ["alloc", "test"], optional = true }

anyhow = "1.0.71"
serde = { version = "1.0.163", default-features = false, optional = true, features = ["derive"] }
rand = { version = "0.8.5", default-features = false, features = ["alloc", "std_rng"] }
rmp-serde = { version = "1.1.1", optional = true }
bincode = { version = "1.3.3", default-features = false, optional = true }
serde_json = { version = "1.0.96", default-features = false, features = ["alloc", "float_roundtrip"], optional = true }
serde_cbor = { version = "0.11.2", default-features = false, features = ["alloc", "std"], optional = true }
dlhn = { version = "0.1.5", default-features = false, optional = true }
bitcode = { version = "0.4.0", default-features = false, optional = true, features = ["derive"] }
rkyv = { version = "0.7.42", default-features = false, optional = true, features = ["alloc", "size_32", "validation"] }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
trybuild = "1.0.80"

[[bench]]
name = "comparison"
harness = false
