[package]
name = "musli-tests"
version = "0.0.21"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.73"
description = """
Müsli is a flexible and generic binary serialization framework.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "serialization"]
categories = ["encoding"]

[features]
default = ["std", "builtin", "model_full", "musli-json", "musli-value", "musli"]
extra = ["rkyv", "dlhn", "bitcode", "serde_cbor"]
full = ["rmp-serde", "bincode", "postcard", "musli-json", "serde_json"]
builtin = ["musli-wire", "musli-descriptive", "musli-storage"]
text = ["musli-json", "serde_json"]
std = ["alloc", "musli/std", "musli-wire?/std", "musli-storage?/std", "musli-json?/std", "musli-zerocopy?/std", "rand/std", "serde_json?/std", "rkyv?/std", "serde?/std"]
alloc = ["musli/alloc", "musli-wire?/alloc", "musli-storage?/alloc", "musli-json?/alloc"]
test = ["musli-wire", "musli-storage", "musli-descriptive"]
simdutf8 = ["musli-wire?/simdutf8", "musli-storage?/simdutf8", "musli-descriptive?/simdutf8", "musli-json?/simdutf8"]
parse-full = ["musli-json?/parse-full"]
musli-wire = ["musli", "dep:musli-wire"]
musli-descriptive = ["musli", "dep:musli-descriptive"]
musli-storage = ["musli", "dep:musli-storage"]
musli-json = ["musli", "dep:musli-json"]
musli-value = ["musli", "dep:musli-value"]
musli-zerocopy = ["dep:musli-zerocopy"]

model_full = ["model_vec", "model_128", "model_usize", "model_tuple", "model_float", "model_map", "model_map_string_key", "model_cstring"]
model_minimal = ["model_vec", "model_float"]
model_cstring = []
model_map = ["std"]
model_vec = []
model_128 = []
model_usize = []
model_tuple = []
model_float = []
model_map_string_key = ["std"]
model_rkyv = ["model_vec", "model_128", "model_map", "model_float"]
model_dlhn = ["model_vec", "model_usize", "model_tuple", "model_float", "model_map_string_key", "model_cstring"]
model_bitcode = ["model_vec", "model_usize", "model_tuple", "model_float", "model_map", "model_map_string_key", "model_cstring"]
model_serde_cbor = ["model_vec", "model_usize", "model_tuple", "model_float", "model_map", "model_map_string_key", "model_cstring"]

dlhn = ["dep:dlhn", "serde"]
serde_json = ["dep:serde_json", "serde", "std"]
serde_cbor = ["dep:serde_cbor", "serde"]
bincode = ["dep:bincode", "serde"]
rmp-serde = ["dep:rmp-serde", "serde"]
serde = ["dep:serde", "bitcode?/serde", "std"]
rkyv = ["dep:rkyv", "std"]
postcard = ["dep:postcard", "serde"]

[dependencies]
musli = { path = "../musli", version = "0.0.67", default-features = false, optional = true, features = ["alloc"] }
musli-wire = { path = "../musli-wire", version = "0.0.67", default-features = false, features = ["alloc", "test"], optional = true }
musli-descriptive = { path = "../musli-descriptive", version = "0.0.67", default-features = false, features = ["alloc", "test"], optional = true }
musli-storage = { path = "../musli-storage", version = "0.0.67", default-features = false, features = ["alloc", "test"], optional = true }
musli-json = { path = "../musli-json", version = "0.0.67", default-features = false, features = ["alloc", "test",], optional = true }
musli-value = { path = "../musli-value", version = "0.0.67", default-features = false, features = ["alloc", "test"], optional = true }
musli-zerocopy = { path = "../musli-zerocopy", version = "0.0.67", default-features = false, features = ["alloc"], optional = true }
musli-macros = { path = "../musli-macros", version = "0.0.67", features = ["test"] }

anyhow = "1.0.75"
serde = { version = "1.0.188", default-features = false, optional = true, features = ["derive"] }
rand = { version = "0.8.5", default-features = false, features = ["alloc", "std_rng"] }
rmp-serde = { version = "1.1.2", optional = true }
bincode = { version = "1.3.3", default-features = false, optional = true }
serde_json = { version = "1.0.107", default-features = false, features = ["alloc", "float_roundtrip"], optional = true }
serde_cbor = { version = "0.11.2", default-features = false, features = ["alloc", "std"], optional = true }
dlhn = { version = "0.1.6", default-features = false, optional = true }
bitcode = { version = "0.4.0", default-features = false, optional = true, features = ["derive"] }
rkyv = { version = "0.7.42", default-features = false, optional = true, features = ["alloc", "size_32", "validation", "strict"] }
postcard = { version = "1.0.8",  default-features = false, optional = true }

[dev-dependencies]
musli = { path = "../musli", version = "0.0.67", default-features = false, features = ["alloc"] }
criterion = { version = "0.4.0", features = ["html_reports"] }
trybuild = "1.0.85"
bstr = "1.7.0"

[[bench]]
name = "comparison"
harness = false
