[package]
name = "musli-utils"
version = "0.0.116"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.76"
description = """
Common utilities shared among Müsli encodings.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "serialization"]
categories = ["encoding", "no-std", "no-std::no-alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]

[features]
default = ["std", "alloc"]
std = ["musli/std", "musli-allocator/std"]
alloc = ["musli-allocator/alloc"]

[dependencies]
musli = { path = "../musli", version = "0.0.116", default-features = false }
musli-allocator = { path = "../musli-allocator", version = "0.0.116", default-features = false }

[dev-dependencies]
rand = "0.8.5"
