[package]
name = "musli-value"
version = "0.0.96"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.76"
description = """
Buffered value support for Müsli.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
keywords = ["no-std::no-alloc", "no_std", "serialization"]
categories = ["encoding", "no-std"]

[features]
default = ["std"]
std = ["alloc", "musli/std", "musli-storage/std", "musli-common/std"]
alloc = ["musli/alloc", "musli-storage/alloc", "musli-common/alloc"]
test = []

[dependencies]
musli = { path = "../musli", version = "0.0.96", default-features = false }
musli-common = { path = "../musli-common", version = "0.0.96", default-features = false }
musli-storage = { path = "../musli-storage", version = "0.0.96", default-features = false }

itoa = "1.0.9"
ryu = "1.0.15"
lexical = "6.1.1"
