[package]
name = "musli-value"
version = "0.0.112"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.76"
description = """
Buffered value support for Müsli.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "serialization"]
categories = ["encoding", "no-std", "no-std::no-alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]

[features]
default = ["std", "alloc"]
std = ["musli/std", "musli-storage/std", "musli-utils/std"]
alloc = ["musli/alloc", "musli-storage/alloc", "musli-utils/alloc"]
test = []

[dependencies]
musli = { path = "../musli", version = "0.0.112", default-features = false }
musli-utils = { path = "../musli-utils", version = "0.0.112", default-features = false }
musli-storage = { path = "../musli-storage", version = "0.0.112", default-features = false }

itoa = "1.0.10"
ryu = "1.0.17"
lexical = "6.1.1"
