[package]
name = "musli-wire"
version = "0.0.63"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.73"
description = """
Fully upgrade stable format for Müsli suitable for network communication.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "serialization"]
categories = ["encoding"]

[features]
default = ["std", "simdutf8"]
std = ["musli/std", "musli-common/std", "musli-storage/std", "alloc"]
alloc = ["musli/alloc", "musli-common/alloc", "musli-storage/alloc"]
test = []
simdutf8 = ["musli-common/simdutf8"]

[dependencies]
musli = { path = "../musli", version = "0.0.63", default-features = false }
musli-common = { path = "../musli-common", version = "0.0.63", default-features = false }
musli-storage = { path = "../musli-storage", version = "0.0.63", default-features = false }
