[package]
name = "musli-ws"
version = "0.0.131"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
description = """
Types for integrating Müsli with websocket frameworks.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
keywords = ["framework", "http", "web"]
categories = ["asynchronous", "network-programming", "web-programming::http-server"]

[features]
default = ["alloc", "std"]
alloc = ["musli?/alloc"]
std = ["musli?/std"]
api = ["alloc", "dep:musli"]
json = ["musli/json", "dep:bytes", "dep:mime", "dep:axum-core", "dep:http"]
ws = ["musli/storage", "std", "api", "dep:bytes", "dep:rand", "tokio/time", "dep:tokio-stream", "dep:axum-core", "axum/ws"]
yew = ["musli/storage", "std", "api", "dep:log", "dep:slab", "dep:wasm-bindgen", "dep:web-sys", "dep:yew", "dep:gloo"]

[dependencies]
musli = { path = "../musli", version = "0.0.131", default-features = false, optional = true }
axum-core = { version = "0.5.2", default-features = false, optional = true }
http = { version = "1.3.1", default-features = false, optional = true }
axum = { version = "0.8.0", default-features = false, optional = true }
bytes = { version = "1.10.0", optional = true }
mime = { version = "0.3.17", default-features = false, optional = true }
rand = { version = "0.9.1", default-features = false, optional = true, features = ["small_rng"] }
tracing = { version = "0.1.40", default-features = false }
tokio = { version = "1.37.0", default-features = false, features = ["time"], optional = true }
tokio-stream = { version = "0.1.15", default-features = false, optional = true }

log = { version = "0.4.21", default-features = false, optional = true }
slab = { version = "0.4.9", default-features = false, optional = true }
wasm-bindgen = { version = "0.2.92", default-features = false, optional = true }
web-sys = { version = "0.3.69", default-features = false, features = ["WebSocket", "MessageEvent", "Performance"], optional = true }
yew = { version = "0.21.0", default-features = false, optional = true }
gloo = { version = "0.11.0", default-features = false, features = ["timers"], optional = true }
