[package]
name = "musli-yew"
version = "0.0.126"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
description = """
Types for integrating Müsli with yew.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
keywords = ["javascript", "web", "webasm"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
musli-axum = { version = "0.0.126", path = "../musli-axum", default-features = false, features = ["api"] }

log = "0.4.21"
slab = "0.4.9"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["WebSocket", "MessageEvent", "Performance"] }
yew = "0.21.0"
musli = { version = "0.0.126", path = "../musli", features = ["storage"] }
gloo = { version = "0.11.0", features = ["timers"], default-features = false }
