[package]
name = "musli-zerocopy-macros"
version = "0.0.109"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.76"
description = """
Macros for Müsli zero-copy.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "serialization", "zerocopy"]
categories = ["encoding", "no-std", "no-std::no-alloc"]

[lib]
proc-macro = true
path = "src/lib.rs"

[features]
sneaky-fields = []

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = { version = "2.0.55", features = ["full", "extra-traits"] }
