[package]
name = "musli-zerocopy"
version = "0.0.91"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2021"
rust-version = "1.73"
description = """
Refreshingly simple zero copy primitives by Müsli.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "serialization", "zerocopy"]
categories = ["encoding"]

[features]
default = ["std"]
std = ["alloc"]
alloc = []
nightly = []

[dependencies]
musli-zerocopy-macros = { version = "=0.0.91", path = "../musli-zerocopy-macros" }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }

[dev-dependencies]
anyhow = "1.0.75"
trybuild = "1.0.85"
musli-zerocopy-macros = { version = "=0.0.91", path = "../musli-zerocopy-macros", features = ["sneaky-fields"] }
