[package]
name = "musli-zerocopy"
version = "0.1.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
edition = "2024"
rust-version = "1.85"
description = """
Refreshingly simple zero copy primitives by Müsli.
"""
documentation = "https://docs.rs/musli"
readme = "README.md"
homepage = "https://github.com/udoprog/musli"
repository = "https://github.com/udoprog/musli"
license = "MIT OR Apache-2.0"
keywords = ["no_std", "serialization", "zerocopy"]
categories = ["encoding", "no-std", "no-std::no-alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg", "--generate-link-to-definition"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(musli_nightly, doc_cfg)'] }

[features]
default = ["std", "alloc"]
std = []
alloc = []

[dependencies]
musli-zerocopy-macros = { version = "=0.1.0", path = "../musli-zerocopy-macros" }
rand = { version = "0.9.0", default-features = false, features = ["small_rng"] }

# Note that musli-macros is tightly coupled with the version of musli-core used.
# Never add this as a dependency directly. This section cannot be enabled and
# ensures that the musli-macros dependency used exactly matches the version of
# musli-core.
#
# See https://github.com/serde-rs/serde/blob/master/serde/Cargo.toml
[target.'cfg(any())'.dependencies]
musli-zerocopy-macros = { version = "=0.1.0", path = "../musli-zerocopy-macros" }

[dev-dependencies]
anyhow = "1.0.81"
trybuild = "1.0.90"
musli-zerocopy-macros = { version = "=0.1.0", path = "../musli-zerocopy-macros", features = ["sneaky-fields"] }
